// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package controller.api.services.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/hashicorp/boundary/internal/gen/controller/api/services;services";

// ListRefreshToken is used to create refresh
// tokens for list endpoints.
message ListRefreshToken {
  // When the refresh token was created
  google.protobuf.Timestamp created_time = 10;
  // The resource type listed. Used to ensure
  // refresh tokens are not used between list methods.
  ResourceType resource_type = 20;
  // A hash of the users permissions
  // at the time of the refresh token issuing.
  bytes permissions_hash = 30;
  // The ID of the last item returned on the
  // previous page.
  string last_item_id = 40;
  // The updated_time of the last item returned on
  // the previous page. This is needed
  // in addition to the ID since it can change after
  // the creation of the refresh token.
  google.protobuf.Timestamp last_item_updated_time = 50;
}

// ResourceType represents the different list
// endpoint resource types supported.
enum ResourceType {
  RESOURCE_TYPE_UNSPECIFIED = 0;
  RESOURCE_TYPE_TARGET = 1;
  RESOURCE_TYPE_HOST = 2;
  RESOURCE_TYPE_SESSION = 3;
  RESOURCE_TYPE_SESSION_RECORDING = 4;
}
